# AsciiArt

./: .gitignore  AsciiArt.cabal  LICENSE  README.md
app/: Main.hs
