name:                AsciiArt
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Brian Bowman
maintainer:          seeker14491@gmail.com
copyright:           2017 Brian Bowman
build-type:          Simple
cabal-version:       >=1.10

executable AsciiArt-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , array
                     , containers
                     , JuicyPixels
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Seeker14491/AsciiArt
